--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -3,6 +3,26 @@
 <language>
   <main_menu_scene>
     <new_game value="NEW GAME"/>
+    <load_game value="LOAD GAME"/>
+    <options value="OPTIONS"/>
+    <credits value="CREDITS"/>
+    <exit value="EXIT"/>
+    <choose_language value="LANGUAGE"/>
+    <english value="ENGLISH"/>
+    <spanish value="SPANISH"/>
+    <volume value="VOLUME"/>
+    <controls value="CONTROLS"/>
+    <back value="BACK"/>
+    <accept value="ACCEPT"/>
+    <decline value="DECLINE"/>
+    <character_stats value="CHARACTER STATS"/>
+    <character_abilities value="CHARACTER ABILITIES"/>
+    <abilities value="ABILITIES"/>
+    <pause value="PAUSE"/>
+    <select value="SELECT"/>
   </main_menu_scene>
+  <battle_1>
+    
+  </battle_1>
 
 </language>
