--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -21,8 +21,11 @@
     <pause value="PAUSE"/>
     <select value="SELECT"/>
   </main_menu_scene>
-  <battle_1>
-    
-  </battle_1>
+  <battle>
+    <resume value="RESUME"/>
+    <main_menu value="MAIN MENU"/>
+    <ability value="ABILITY"/>
+    <defend value="DEFEND"/>
+  </battle>
 
 </language>
