--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -21,10 +21,14 @@
     <pause value="PAUSE"/>
     <select value="SELECT"/>
   </main_menu_scene>
-  <battle>
+  <battle_scene>
     <resume value="RESUME"/>
     <main_menu value="MAIN MENU"/>
-    <defend value="DEFEND"/>
-  </battle>
+    <battle_abilities value="Abilities"/>
+    <defend value="Defend"/>
+  </battle_scene>
+  <win_scene>
+    <win_accept value="PRESS ACCEPT TO RETURN TO MAIN MENU"/>
+  </win_scene>
 
 </language>
