choose scene like in the wiki

--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -34,5 +34,6 @@
     <map1 value="EASTLANDS"/>
     <map2 value="BLAZELANDS"/>
     <map3 value="BLIZZLANDS"/>
+    <map4 value="FINAL BOSS"/>
   </choose_map_scene>
 </language>
