a little bit more of intro

--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -54,5 +54,20 @@
     <line6 value="exaggeration of a great accomplishment made by somebody in another time... Who knows if the "/>
     <line7 value="characters in this story ever existed or were inspired by some unusual folks... Oh my, we are rambling "/>
     <line8 value="again aren't we? Why didn't you stop us? It is time already for the story to begin, don't you think?"/>
+    
+    <line9 value="It all happened in the kingdom of Citemia. As in all medieval stories there were two opposing forces, being two great mages, who coexisted in the same"/>
+    <line10 value="time in this strange kingdom. As you may know there is only place for one king in one kingdom. Well, the same is true for great mages, they are "/>
+    <line11 value="proud individuals who spend their life trying to be the wisest human beings, and as it happens, there can only be one wisest living soul. These two great"/>
+    <line12 value="mages answered to the names of Sapphire and CherryBlackGlasses. Sapphire was kind, known for his humor and his jokes, he would dress up as a "/>
+    <line13 value="clown and make people laugh. He was respected all over the kingdom, citizens would often come to him searching for advice or aid in their problems."/>
+    <line14 value="CherryBlackGlasses was the complete opposite, an evil mage known for his atrocities, cruelty and tyranny, even among his very own ill-called partners, "/>
+    <line15 value="making them work like slaves. Too focused on his goals he did not care about the means or consequences of his actions. Nobody wanted to have"/>
+    <line16 value="anything to do with him, and in the end, one by one, his companions left him. Unable to bear this burden of solitude and full of envy and hatred "/>
+    <line17 value="towards Sapphire, the evil sorcerer decided he would rewrite history. What if people's favorite clown mage was not so funny and cheerful as everyone"/>
+    <line18 value="thought? Hence, as his master move, he stole the touch of the clown. From now on, his jokes would not be funny anymore and instead of laugh, people "/>
+    <line19 value="would take pity on him... Wait, we just remembered that tomorrow is our Project II pitch presentation, and we still have not finished the wiki!!"/>
+    <line20 value="We are sorry but you will have to excuse us and find the ending of this story by yourself. We're sure you are going to come up with something that "/>
+    <line21 value="makes sense, right? With beautiful knights and brave princesses... You would not put something too silly like a martial arts bunny, or a weeb ninja, this"/>
+    <line22 value="would not make for much of a story... Whatever, it is not up to us anymore, good luck in your quest dear friend."/>
   </intro_scene>
 </language>
