--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -47,6 +47,31 @@
     <iris attack="Fist attack" ability_1="Rabbit kick" ability_2="Carrot time" ability_3="Rabbit rage"/>
     <storm attack="Acid throw" ability_1="Snail charge" ability_2="Time to hide" ability_3="Vampiric snail"/>
     <georgeb attack="Random throw" ability_1="Bear trap" ability_2="Cherry boom" ability_3="Flying birds"/>
+    <ability_info range="Range: " target="Target: " type="Type: " effect="Effect: " amount="Amount: "/>
+    <iris_info>
+      <attack range="1" target="enemy" type ="single" effect="damage" amount="24 + ATK F."/>
+      <ability1 range="1" target="enemy" type ="area" effect="damage" amount="25 + ATK F."/>
+      <ability2 range="0" target="self" type ="single" effect="power up" amount="+10 ATK F.DEF F."/>
+      <ability3 range="1" target="enemy" type ="area" effect="damage" amount="40 + ATK F."/>
+    </iris_info>
+    <georgeb_info>
+      <attack range="4" target="enemy" type ="single" effect="damage" amount="25 + ATK S."/>
+      <ability1 range="6" target="enemy" type ="single" effect="damage" amount="25 + ATK F."/>
+      <ability2 range="4" target="enemy" type ="area" effect="damage" amount="33 + ATK S."/>
+      <ability3 range="3" target="enemy" type ="area" effect="damage" amount=" 35 + ATK S."/>
+    </georgeb_info>
+    <sapphire_info>
+      <attack range="5" target="ally/enemy" type ="single" effect="heal/damage" amount="25 + ATK S."/>
+      <ability1 range="2" target="enemy" type ="area" effect="area" amount="26 + ATK F."/>
+      <ability2 range="5" target="ally/enemy" type ="single" effect="heal/damage" amount="30 + ATK S."/>
+      <ability3 range="a lot" target="ally/enemy" type ="moving area" effect="heal/damage" amount="35 + ATK S."/>
+    </sapphire_info>
+    <storm_info>
+      <attack range="1" target="enemy" type ="single" effect="damage" amount="20 + ATK F."/>
+      <ability1 range="3" target="enemy" type ="single" effect="stun" amount="1 turn"/>
+      <ability2 range="0" target="self" type ="single" effect="invulnerability" amount="1 turn"/>
+      <ability3 range="0" target="self" type ="single" effect="heal when attack" amount="50% dmg dealt"/>
+    </storm_info>
   </battle_scene>
   <win_scene>
     <win_accept value="PRESS ACCEPT TO RETURN TO MAIN MENU"/>
