--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -21,13 +21,13 @@
     <pause value="PAUSE"/>
     <select value="SELECT"/>
     <credits0 value="CHERRY GLASSES TEAM"/>
-    <credits1 value="LEAD: Cere Venteo"/>
-    <credits2 value="MANAGEMENT: Gerard Berenguer"/>
-    <credits3 value="GAME DESIGN: Aleix Castillo"/>
-    <credits4 value="UI: Martí Torras"/>
-    <credits5 value="CODE: Guillem Sánchez"/>
-    <credits6 value="ART: Kevin Muñoz"/>
-    <credits7 value="ART: Eric Jiménez"/>
+    <credits1 value="LEAD AND MANAGEMENT: Cere Venteo"/>
+    <credits2 value="GAME DESIGN: Aleix Castillo"/>
+    <credits3 value="UI: Martí Torras"/>
+    <credits4 value="CODE: Guillem Sánchez"/>
+    <credits5 value="ART: Kevin Muñoz"/>
+    <credits6 value="ART + CODE + UI CORDINATOR: Eric Jiménez"/>
+    <credits7 value="AUDIO: Kevin Muñoz"/>
     <credits8 value="QA: Ricky Castro"/>
     <credits9 value="This team is composed by CITM (UPC) "/>
     <credits10 value="students of the videogame design and"/>
