--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -27,7 +27,7 @@
     <credits4 value="CODE: Guillem Sánchez"/>
     <credits5 value="ART: Kevin Muñoz"/>
     <credits6 value="ART + CODE + UI CORDINATOR: Eric Jiménez"/>
-    <credits7 value="AUDIO: Kevin Muñoz"/>
+    <credits7 value="AUDIO: Iván Jiménez Fernández"/>
     <credits8 value="QA: Ricky Castro"/>
     <credits9 value="This team is composed by CITM (UPC) "/>
     <credits10 value="students of the videogame design and"/>
