--- a/Clowns' F8/Game/Languages/_EN.xml
+++ b/Clowns' F8/Game/Languages/_EN.xml
@@ -15,6 +15,8 @@
     <back value="BACK"/>
     <accept value="ACCEPT"/>
     <decline value="DECLINE"/>
+    <keyboard value="KEYBOARD"/>
+    <gamepad value="GAMEPAD"/>
     <character_stats value="CHARACTER STATS"/>
     <character_abilities value="CHARACTER ABILITIES"/>
     <abilities value="ABILITIES"/>
