--- a/Clowns' F8/Game/Languages/_ES.xml
+++ b/Clowns' F8/Game/Languages/_ES.xml
@@ -15,6 +15,8 @@
     <back value="ATRÁS"/>
     <accept value="ACEPTAR"/>
     <decline value="DECLINAR"/>
+    <keyboard value="TECLADO"/>
+    <gamepad value="MANDO"/>
     <character_stats value="ESTADÍSTICAS PERSONAJES"/>
     <character_abilities value="HABILIDADES PERSONAJES"/>
     <abilities value="HABILIDADES"/>
